# xairo

./: .envrc  .tool-versions  README.md  mix.exs  scratch.txt
.github/workflows/: ci.yml  clippy.yml  credo.yml
config/: config.exs
examples/: bell.ex  sine.ex  squares.ex  squiggles.ex
lib/: xairo.ex
lib/xairo/: context.ex  font_extents.ex  font_face.ex  image.ex  image_surface.ex  linear_gradient.ex  matrix.ex  mesh.ex  native.ex  path.ex  pdf_surface.ex  point.ex  ps_surface.ex  radial_gradient.ex  rgba.ex  solid_pattern.ex  surface_pattern.ex  svg_surface.ex  text_extents.ex  vector.ex
native/xairo/: Cargo.toml
native/xairo/src/: context.rs  font_extents.rs  font_face.rs  image_surface.rs  lib.rs  linear_gradient.rs  matrix.rs  mesh.rs  path.rs  pdf_surface.rs  point.rs  ps_surface.rs  radial_gradient.rs  rgba.rs  solid_pattern.rs  surface_pattern.rs  svg_surface.rs  text_extents.rs  vector.rs
native/xairo/src/enums/: antialias.rs  error.rs  fill_rule.rs  font_slant.rs  font_weight.rs  format.rs  line_cap.rs  line_join.rs  mod.rs  operator.rs  path_segment.rs  surface_type.rs  svg_unit.rs
test/: test_helper.exs  xairo_test.exs
test/support/: image_helpers.ex
test/xairo/: context_clip_test.exs  context_extents_test.exs  context_operators_test.exs  context_settings_test.exs  context_test.exs  context_transformations_test.exs  font_extents_test.exs  font_face_test.exs  image_surface_test.exs  image_test.exs  linear_gradient_test.exs  matrix_test.exs  mesh_test.exs  path_test.exs  pdf_surface_test.exs  point_test.exs  ps_surface_test.exs  rgba_test.exs  (+6 more)
(+8 files in other folders)
