[package]
name = "xairo"
version = "0.1.0"
authors = []
edition = "2018"
license = "MIT"
repository = "https://github.com/mikowitz/xairo"
description = "NIF bindings for using the cairo graphics library from Elixir"
keywords = ["cairo", "graphics", "2d", "rustler", "elixir", "bindings"]
categories = ["art", "graphics", "drawing"]

[lib]
name = "xairo"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = { version = "0.29.1", features = ["nif_version_2_16"]}
cairo-rs = { version = "0.14.0", features = ["pdf", "png", "ps", "svg", "v1_16"] }
